--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI= mongodb+srv://rajoriyaaradhna963:your-password@cluster0.frw2rs1.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET =aradhnaa
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=ar-backend
+REFRESH_TOKEN_EXPIRY=10d
